--- a/csvts/src/main/resources/templates/admin/pending-time-logs.html
+++ b/csvts/src/main/resources/templates/admin/pending-time-logs.html
@@ -56,7 +56,7 @@
                                     </td>
                                     <td th:text="${log.task.title}">Task Title</td>
                                     <td>
-                                        <span class="badge bg-primary" th:text="${log.hoursLogged + ' hrs'}">0 hrs</span>
+                                        <span class="badge bg-primary" th:text="${log.hoursWorked + ' hrs'}">0 hrs</span>
                                     </td>
                                     <td th:text="${#temporals.format(log.dateLogged, 'MMM dd, yyyy')}">Date</td>
                                     <td>
